--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: carolinalakes@sudomail.com</p>
+            <p>email: carolinalakes@sudomail.com</p>
             <p>Phone: (919) 897-5824</p>
         </section>
     </main>
