--- a/index.html
+++ b/index.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carolina Lakes Exterior Services</title>
-    <link rel="stylesheet" href="styles.css">
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Carolina Lakes Exterior Services - FAQ</title>
+	<link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h1>Carolina Lakes Exterior Services</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="services">
-            <h2>Services</h2>
-            <img src="https://www.harborfreight.com/media/catalog/product/cache/9fc4a8332f9638515cd199dd0f9238da/6/4/64931_W3.jpg" alt="Pressure Washing" style="width: 100%; max-width: 400px;">
-            <ul>
-                <li>Residential Pressure Washing</li>
-                <li>Commercial Pressure Washing</li>
-                <li>Driveway Cleaning</li>
-                <li>Graffiti Removal</li>
-                <li>Deck & Patio Cleaning</li>
-            </ul>
-        </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>Carolina Lakes Exterior Services is a family owned professional pressure washing company serving Sanford and the surrounding areas. We specialize in residential and commercial pressure washing services. Our team of experts is dedicated to providing the highest quality service to our customers.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>email: carolinalakes@sudomail.com</p>
-            <p>Phone: (919) 897-5824</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 Carolina Lakes Exterior Services. All rights reserved.</p>
-    </footer>
+<header>
+<h1>Carolina Lakes Exterior Services</h1>
+</header>
+<!-- Navigation bar for entire site. -->
+<nav>
+<ul>
+	<li><a href="https://carolinalakes.services/index.html">Home</a></li>
+	<li><a href="https://carolinalakes.services/services.html">Services</a></li>
+	<li><a href="https://carolinalakes.services/contact.html">Contact</a></li>
+	<li><a href="https://carolinalakes.services/faq.html">FAQ</a></li>
+</ul>
+</nav>
+
+<main>
+<p></p>
+
+<h2>About</h2>
+
+<p>Established in Sanford in the spring of 2023, Carolina Lakes Exterior Services is a veteran owned small business serving Sanford, Fayetteville, and surrounding communities. We specialize in residential and commercial exterior cleaning services. Our expert technicians are dedicated to providing the highest value service to our customers. We provide a wide range of exterior cleaning services to keep your property maintained, maximize longevity of components such as roofs and windows, and, most importantly, keep your house clean so it looks and feels like <em>home</em>!</p>
+<br>
+<p>We offer several packages, and are happy to work within your budget to determine the best service option for you. Call us today for a free estimate!</p>
+<img src="IMG_7562.jpg" alt="Owner hard at work!">
+<footer>
+<p>&copy; 2023 Carolina Lakes Exterior Services. All rights reserved.</p>
+</footer>
 </body>
 </html>
