--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 <h1>Carolina Lakes Exterior Services</h1>
 </header>
 <!-- Navigation bar for entire site. -->
+
 <nav>
 <ul>
 	<li><a href="https://carolinalakes.services/index.html">Home</a></li>
@@ -23,12 +24,11 @@
 
 <h2>About</h2>
 
-<p>Established in Sanford in the spring of 2023, Carolina Lakes Exterior Services is a veteran owned small business serving Sanford, Fayetteville, and surrounding communities. We specialize in residential and commercial exterior cleaning services. Our expert technicians are dedicated to providing the highest value service to our customers. We provide a wide range of exterior cleaning services to keep your property maintained, maximize longevity of components such as roofs and windows, and, most importantly, keep your house clean so it looks and feels like <em>home</em>!</p>
-<br>
-<p>We offer several packages, and are happy to work within your budget to determine the best service option for you. Call us today for a free estimate!</p>
-<img src="IMG_7562.jpg" alt="Owner hard at work!">
+<p>Please contact us via phone (text or call) at 919-897-5824, or email at <a href="mailto:carolinalakes@sudomail.com">carolinalakes@sudomail.com</a>. YouTube and socials are on ramp, and will be released soon!</p>
+
 <footer>
 <p>&copy; 2023 Carolina Lakes Exterior Services. All rights reserved.</p>
 </footer>
+</main>
 </body>
 </html>
