--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
 &nbsp;
 
 <p>We offer a 10% discount for bundling 2 services together, and 15% for bundling 3 or more.</p>
-
+<img src="GuttersBefore-5.jpg" alt="Before"><img src="GuttersAfter-2.jpg" alt="After">
 <footer>
 <p>&copy; 2023 Carolina Lakes Exterior Services. All rights reserved.</p>
 </footer>
